# prime-text-editor

./: .gitignore  Cargo.toml  NOTICE  README.md  THIRD-PARTY.md  app-config.toml  build.rs  permission_templates.toml
i18n/: en.json  es.json
src/: main.rs  theme.rs
theme/: theme.json
ui/: app.slint  callbacks.slint
