[package]
name = "prime-text-editor"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
log = "0.4"
log-server = { package = "xous-api-log", path = "/Users/user/.foundation/sdk/current/lib/keyos/xous/api/log" }
server = { path = "/Users/user/.foundation/sdk/current/lib/keyos/server" }
slint-keyos-platform = { path = "/Users/user/.foundation/sdk/current/lib/keyos/slint-keyos-platform/runtime" }
foundation-themes = { path = "/Users/user/.foundation/sdk/current/lib/keyos/sdk/crates/foundation-themes" }

[build-dependencies]
foundation-themes = { path = "/Users/user/.foundation/sdk/current/lib/keyos/sdk/crates/foundation-themes" }
slint-keyos-platform-build = { path = "/Users/user/.foundation/sdk/current/lib/keyos/slint-keyos-platform/build" }
