[package]
name = "prime-text-editor"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
publish = false

[workspace]

[dependencies]
log = "0.4"
log-server = { package = "xous-api-log", path = "../keyos-sdk/lib/keyos/xous/api/log" }
server = { path = "../keyos-sdk/lib/keyos/server" }
slint-keyos-platform = { path = "../keyos-sdk/lib/keyos/slint-keyos-platform/runtime" }
foundation-themes = { path = "../keyos-sdk/lib/keyos/sdk/crates/foundation-themes" }

[build-dependencies]
foundation-themes = { path = "../keyos-sdk/lib/keyos/sdk/crates/foundation-themes" }
slint-keyos-platform-build = { path = "../keyos-sdk/lib/keyos/slint-keyos-platform/build" }
